<resources>
    <string name="app_name">Talent Class Firebase BookApp</string>
    <string name="shared_preference_talenthub">sharedPreferencesTalentHubClass</string>
    <string name="title">Tittle</string>
    <string name="name_author">Author Name</string>
    <string name="year_release">Year Release</string>
    <string name="category">Category</string>
    <string name="link_Image">Link Image</string>
</resources>