<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddBookActivity">

    <!--EditText for adding Title book name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/idEdtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="Enter Title Book"
        android:padding="12dp"
        style="@style/EditText.PoppinsNormal14purple500"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:inputType="textCapCharacters" />

    <!--EditText for adding Author book name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_author"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/idEdtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        style="@style/EditText.PoppinsNormal14purple500"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="Enter Author"
        android:inputType="textCapWords" />

    <!--EditText for adding Yaer Release book name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_release"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/idEdtYearRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="12dp"
        style="@style/EditText.PoppinsNormal14purple500"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="Enter Year Release"
        android:inputType="numberDecimal" />

    <!--Spinner for adding Category book name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Spinner
        android:id="@+id/idSpinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="12dp"
        style="@style/EditText.PoppinsNormal14purple500"
        android:background="@drawable/shape_rectangle_outline_8_020202" />


    <!--EditText for adding link Cover-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_Image"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/idEdtLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="12dp"
        style="@style/EditText.PoppinsNormal14purple500"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="Enter Link Image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="horizontal" >

        <!--Button for adding data to Firebase-->
        <Button
            android:id="@+id/idBtnSendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/primary"
            android:text="Add Book"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="horizontal" >

        <!--Button for back data-->
        <Button
            android:id="@+id/idBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/baseline_arrow_back_24"
            android:backgroundTint="@color/secondary"
            android:text="Back"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
